# Task_Processor

./: .gitignore  CMakeLists.txt  main.cpp
includes/: ResultHolder.hpp  TaskFactory.hpp  Tasks.hpp  ThreadSafeQueue.hpp  ThreadsPool.hpp
